# parprog2021

./: CMakeLists.txt  array.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task8.cpp
task1/: task1.cpp
task2/: task2.cpp
task3/: task3.cpp
task4/: task4.cpp
task5/: task5.cpp
task6/: task6.cpp
task8/: Makefile  task8.cpp
